# ALF

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Compile.sh  Makefile  MakefileHPC  MakefilePure  Notes_8.txt  QMCT.kdev4  README.md  Reply.txt  SpinXYZ_eq_Auto_Tr_3.14_3.14  check_magma.f90  configure.fish  configure.sh  configureHPC.sh  configureIntel.sh  configureMUC.sh  files_for_arxiv.sh  files_for_arxiv2.sh  known_issues.md  notes.md  proofs_comments.txt  set_env.sh  setenv.sh
Analysis/: Compile_cov  Compile_eq  Compile_ratio  Compile_scal  Makefile  Max_SAC.F90  Max_SAC.f90  Max_SAC_T0.f90  Max_SAC_ph.f90  ana.F90  ana_hdf5.F90  ana_mod.F90  convert_batch.sh  convert_bins.py  convert_latt.F90  cov_eq.F90  cov_eq.f90  cov_ratio.f90  cov_scal.f90  cov_tau.F90  cov_tau.f90  cov_tau_sym.f90  fix-latt.py  jackv5.f90  match_density.py  maxent_wrapper_mod.F90  plot_cdw_heatmap.py  plot_loss.py  plot_loss_ob.py  uhf_scan_tV_ft_parallel.py  uhf_scan_tV_parallel.py  uhf_scan_tV_parallel_ob.py  vmc_adam_exactscan.py  vmc_adam_hdf5.py  vmc_adam_scan2d.py  vmc_scan_vmap.py  vmc_slatD_SR_real.py  vmc_sr_jit.py  weights_corr_mod.F90
Analysis_7/: cov_eq.f90  cov_tau.f90
Analysis_8/: Makefile  jackv5.f90
Analysis_Johannes/: Compile_Max  Compile_Max_ph  Compile_cov  Compile_en  Compile_eq  Makefile  Max_SAC.f90  Max_SAC_ph.f90  cov_eq.f90  cov_gap.f90  cov_tau.f90  jackv6.f90
CPMC_prog/: ContainerElementBase_mod.F90  DynamicMatrixArray_mod.F90  Fields_mod.F90  Hamiltonian_main_mod.F90  Hamiltonians.list  Hop_mod.F90  Makefile  OpTTypes_mod.F90  Operator_mod.F90  Predefined_Hop_mod.F90  Predefined_Int_mod.F90  Predefined_Latt_mod.F90  Predefined_Obs_mod.F90  Predefined_Trial_mod.F90  QDRP_decompose_mod.F90  Set_random_mod.F90  Stepwlk.F90  WaveFunction_mod.F90  brw_init.F90  brw_init_mod.F90  cgr1_mod.F90  control_mod.F90  gfun_mod.F90  main.F90  observables_mod.F90  parse_ham_mod.py  stepwlk.F90  tau_m_mod.F90  tau_p_mod.F90  udv_state_mod.F90  upgrade_mod.F90
Documentation/: .gitignore  ALF-05.tex  ALF_v1.0.tex  Doc.idx  Doc.toc  ED_notes.tex  Hubb_can_alf_2.0.tex  Kondo_SUN.tex  (+39 more)
src/Analysis/: CMakeLists.txt
testsuite/Analysis.tests/: 1-maxent-kernel-overflow.F90  CMakeLists.txt
testsuite/libmscbdecomp_mod/: 1-HomogeneousExp-lmult.F90  1-ZeroDiag.F90  2-HomogeneousDiag.F90  3-TracelessDiag.F90  4-GeneralDiag.F90  5-EulerExponential.F90  6-FullExponential.F90  CMakeLists.txt
(+537 files in other folders)
